--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -538,7 +538,7 @@
 	.box {
 		border-radius: 4px;
 		margin-bottom: 2em;
-		background: #2c2c32;
+		background: #0f0f10;
 		text-align: center;
 	}
 
