--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -538,7 +538,7 @@
 	.box {
 		border-radius: 4px;
 		margin-bottom: 2em;
-		background: #0f0f10;
+		background: #1c1c21;
 		text-align: center;
 	}
 
